# cigi-ccl

./: CMakeLists.txt  README  _CMAKE_BUILD.bat  cigicl.cmake.in  cmake_generate_linux.sh  cmake_generate_vc2010_win32.bat  cmake_generate_vc2010_x64.bat  cmake_generate_vc2013_win32.bat  cmake_generate_vc2013_x64.bat  cmake_generate_vc2015_win32.bat  cmake_generate_vc2015_x64.bat  cmake_generate_vc2017_win32.bat  cmake_generate_vc2017_x64.bat
cmake/: CCL_Functions.cmake
examples/: CMakeLists.txt
examples/CigiDummyIG/: CMakeLists.txt  DummyIG.cpp
examples/CigiMiniHost/: CMakeLists.txt  MiniHost.cpp
examples/tinyxml/: CMakeLists.txt
include/: CigiIncomingMsg.h
source/: CigiBaseSymbolTextDef.cpp  CigiIncomingMsg.cpp  CigiSymbolTextDefV4.cpp
